<resources>
    <string name="app_name"></string>
    <string name="email">Correo</string>
    <string name="welcome">BIENVENIDO A UAX ARENA</string>
    <string name="login">Entrar</string>
    <string name="password">Contraseña</string>
    <string name="entry_button">Empezar el desafío</string>
    <string name="about">SOBRE EL JUEGO</string>
    <string name="play">JUGAR</string>
    <string name="characters">PERSONAJES</string>
    <string name="logout">CERRAR SESIÓN</string>
    <string name="menus">Menú</string>
    <string name="logout1">Logout</string>
    <string name="acercade">ACERCA DE…</string>
    <string name="texto">Lorem Ipsum es simplemente un texto ficticio
        de la industria de la impresión y la composición tipográfica.
        Lorem Ipsum ha sido el texto ficticio estándar de la industria desde
        el año 1500, cuando un impresor desconocido tomó una galera de tipos y
        la codificó para hacer un libro de muestras tipográficas. Ha sobrevivido
        no solo cinco siglos, sino también el salto a la composición tipográfica
        electrónica, permaneciendo esencialmente sin cambios.</string>
    <string name="personaje_1">Hot Cappuccino</string>
    <string name="personaje_3">Makarov</string>
    <string name="personaje_2">Soap</string>
    <string name="personaje_4">Capitan Price</string>
    <string name="personajes">PERSONAJES</string>
    <string name="contrasena_olvidada">¿Has olvidado la contraseña?</string>
    <string name="registro">¿Eres nuevo usuario? Registrate ahora...</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="registrarse_2">REGISTRARSE</string>
    <string name="correo_enviar">Introduzca el correo</string>
    <string name="enviar">RESETEAR</string>
    <string name="inicio">INICIO</string>
    <string name="confirmar">CONFIRMAR</string>
    <string name="proximamente">PRÓXIMAMENTE...</string>
    <string name="cambia_tu_contrasena">Cambia tu contraseña</string>
</resources>
